specified ContentType for HTML, PDF and JSON files

--- a/soda-wps/RePEc/ajr/sodwps/index.html
+++ b/soda-wps/RePEc/ajr/sodwps/index.html
@@ -1,4 +1,4 @@
 <html>
-<br><a href="YYYY-NO.pdf">YYYY-NO.pdf</a>
-<br><a href="YYYY-NO.rdf">YYYY-NO.rdf</a>
+<br><a href="2020-01.pdf">2020-01.pdf</a>
+<br><a href="2020-01.rdf">2020-01.rdf</a>
 </html>
